styles.css
body {
    display: grid;
    place-items: center;
}

form {
    width: 45vw;
    height: 45vh;
    display: grid;
    grid-template-rows: repeat(3,1fr);
    justify-items: center;
    margin: 0px;
    padding: 0px;
    font-size: 16px;
    background-color: white;
}

#label1,
#label2,
#submitButton {
    display: block;
    margin: 1.2rem 0.4rem 1rem 0.4rem;
}

#name1,
#name2 {
    margin-left: 10px;
}

#submitButton {
    justify-self: center;
    padding: 0.5rem 1.5rem;
}

#container {
    display: grid;
    width: 30vw;
    height: 30vh;
    grid-template: repeat(3,10vw) / repeat(3,10vh);
}

.box {
    border: 1px solid black;
    font-size: 48px;
    justify-content: center;
    align-content: center;
    display: grid;
}

.x {
    color: red;
}

.o {
    color: blue;
}

#winnerMessage {
    color: red;
    background-color: white;
    padding: 5px;
    text-align: center;
    font-size: 48px;
    border: black solid 2px;
    width: 50vw;
}

